--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "recoil": "^0.7.3"
+    "react-textarea-autosize": "^8.3.4",
+    "recoil": "^0.7.3",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.1",
