--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.0",
+    "@hookform/resolvers": "^2.9.3",
     "nanoid": "^3.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.33.0",
     "react-icons": "^4.4.0",
     "react-textarea-autosize": "^8.3.4",
     "recoil": "^0.7.3",
