--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.0",
+    "@headlessui/react": "^1.6.5",
     "@hookform/resolvers": "^2.9.3",
+    "dayjs": "^1.11.3",
     "nanoid": "^3.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
