--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p $PORT",
     "build": "next build",
     "start": "next start -p $PORT",
+    "type:check": "tsc --noEmit",
     "lint": "next lint",
     "format": "prettier --write src",
     "lint:fix": "eslint --fix src"
