--- a/.github/workflows/type-check.yaml
+++ b/.github/workflows/type-check.yaml
@@ -5,7 +5,7 @@ on:
       - main
   workflow_dispatch:
 jobs:
-  publish-to-npm:
+  type-check:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
