--- a/.github/workflows/type-check.yaml
+++ b/.github/workflows/type-check.yaml
@@ -10,9 +10,12 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-      - name: install
+          cache: npm
+      - name: Install dependencies
         run : yarn install
-      - name: type-check
+      - name: Type check
         run : yarn type:check
