--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check:lint": "next lint",
     "check:format": "prettier src --check",
     "fix:format": "prettier --write src",
-    "fix:lint": "eslint --fix src"
+    "fix:lint": "eslint --fix src",
+    "storybook": "start-storybook -p $STORY_BOOK_PORT"
   },
   "dependencies": {
     "@dnd-kit/core": "6.0.5",
@@ -30,6 +31,16 @@
     "zod": "3.17.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^ 0.0.13",
     "@tsconfig/strictest": "1.0.1",
     "@types/node": "17.0.36",
     "@types/react": "18.0.14",
@@ -37,9 +48,11 @@
     "@typescript-eslint/eslint-plugin": "5.30.4",
     "@typescript-eslint/parser": "5.30.4",
     "autoprefixer": "10.4.7",
+    "babel-loader": "^8.2.5",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-storybook": "^0.5.13",
     "eslint-plugin-tailwindcss": "3.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "postcss": "8.4.14",
