--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
     "plugin:storybook/recommended",
     "prettier"
   ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["unused-imports","@typescript-eslint","tailwindcss"],
+  "plugins": ["unused-imports"],
   "rules": {
     "@next/next/no-img-element": "off",
     "@typescript-eslint/no-unused-vars": "off",
