--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p $PORT",
     "build": "next build",
     "start": "next start -p $PORT",
+    "check": "run-p -l -c --aggregate-output check:*",
     "check:type": "tsc --noEmit",
     "check:lint": "next lint",
     "check:format": "prettier src --check",
@@ -22,6 +23,7 @@
     "dayjs": "1.11.3",
     "nanoid": "4.0.0",
     "next": "12.2.1",
+    "npm-run-all": "^4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.33.1",
