fix bug scripts check to check:all

--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Install dependencies
         run : yarn install
       - name: Code check
-        run : yarn check
+        run : yarn check:all
