--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p $PORT",
     "build": "next build",
     "start": "next start -p $PORT",
-    "check": "run-p -l -c --aggregate-output check:*",
+    "check:all": "run-p -l -c --aggregate-output check:*",
     "check:type": "tsc --noEmit",
     "check:lint": "next lint",
     "check:format": "prettier src --check",
