remove npm-run-all

--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -16,5 +16,9 @@ jobs:
           node-version: '16.x'
       - name: Install dependencies
         run : yarn install
-      - name: Code check
-        run : yarn check:all
+      - name: Type check
+        run : yarn check:type
+      - name: Lint check
+        run : yarn check:lint
+      - name: Format check
+        run : yarn check:format
