--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "check:type": "tsc --noEmit",
-    "check:lint": "eslint lint",
+    "check:lint": "eslint src",
     "check:format": "prettier src --check",
     "fix:format": "prettier --write src",
     "fix:lint": "eslint --fix src",
