--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check:format": "prettier src --check",
     "fix:format": "prettier --write src",
     "fix:lint": "eslint --fix src",
-    "storybook": "start-storybook -p $STORY_BOOK_PORT"
+    "storybook": "start-storybook -p $STORY_BOOK_PORT",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@dnd-kit/core": "6.0.5",
