--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,39 @@
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
     "plugin:tailwindcss/recommended",
-    "plugin:storybook/recommended",
     "prettier"
   ],
   "plugins": ["unused-imports"],
   "rules": {
     "@next/next/no-img-element": "off",
-    "@typescript-eslint/no-unused-vars": "off",
     "react-hooks/exhaustive-deps": "off",
+    "@typescript-eslint/no-unused-vars": "off",
     "unused-imports/no-unused-imports": "error",
     "@typescript-eslint/consistent-type-imports": "error",
-    "import/order": [2, { "alphabetize": { "order": "asc" } }]
-  }
+    "import/order": [2, { "alphabetize": { "order": "asc" } }],
+    "import/no-default-export": "error"
+  },
+  "overrides": [
+    {
+      "files": ["*/pages/**"],
+      "rules": {
+        "import/no-default-export": "off",
+        "import/prefer-default-export": "error"
+      }
+    },
+    {
+      "files": ["*/**/*.stories.*"],
+      "rules": {
+        "import/no-default-export": "off",
+        "import/prefer-default-export": "error"
+      }
+    },
+    {
+      "files": ["*/**/*.config.*"],
+      "rules": {
+        "import/no-default-export": "off",
+        "import/prefer-default-export": "error"
+      }
+    }
+  ]
 }
