--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p $PORT",
     "build": "next build",
     "start": "next start -p $PORT",
+    "test": "jest",
     "check:type": "tsc --noEmit",
     "check:lint": "eslint src",
     "check:format": "prettier src --check",
@@ -20,6 +21,8 @@
     "@dnd-kit/utilities": "3.2.0",
     "@headlessui/react": "1.6.6",
     "@hookform/resolvers": "2.9.5",
+    "base64-emoji-parser": "^0.1.4",
+    "crypto-js": "^4.1.1",
     "dayjs": "1.11.3",
     "nanoid": "4.0.0",
     "next": "12.2.2",
@@ -43,6 +46,8 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^ 0.0.13",
     "@tsconfig/strictest": "1.0.1",
+    "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^28.1.5",
     "@types/node": "17.0.36",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
@@ -56,6 +61,8 @@
     "eslint-plugin-storybook": "0.6.1",
     "eslint-plugin-tailwindcss": "3.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "postcss": "8.4.14",
     "prettier": "2.7.1",
     "tailwindcss": "3.1.6",
