--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -14,11 +14,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-      - name: Install dependencies
-        run : yarn install
-      - name: Type check
-        run : yarn check:type
-      - name: Lint check
-        run : yarn check:lint
-      - name: Format check
-        run : yarn check:format
+      - name: install dependencies
+        run: yarn install
+      - name: check
+        run: yarn check:all
