--- a/package.json
+++ b/package.json
@@ -23,30 +23,30 @@
     "@dnd-kit/sortable": "7.0.1",
     "@dnd-kit/utilities": "3.2.0",
     "@headlessui/react": "1.6.6",
-    "@hookform/resolvers": "2.9.6",
+    "@hookform/resolvers": "2.9.7",
     "base64-emoji-parser": "^0.1.4",
     "crypto-js": "^4.1.1",
     "dayjs": "1.11.4",
     "nanoid": "4.0.0",
-    "next": "12.2.2",
+    "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.33.1",
+    "react-hook-form": "7.34.0",
     "react-icons": "4.4.0",
     "react-textarea-autosize": "8.3.4",
     "recoil": "0.7.4",
-    "zod": "3.17.9"
+    "zod": "3.17.10"
   },
   "devDependencies": {
-    "@babel/core": "7.18.9",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
+    "@babel/core": "7.18.10",
+    "@storybook/addon-actions": "6.5.10",
+    "@storybook/addon-essentials": "6.5.10",
+    "@storybook/addon-interactions": "6.5.10",
+    "@storybook/addon-links": "6.5.10",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/react": "^6.5.9",
+    "@storybook/builder-webpack5": "6.5.10",
+    "@storybook/manager-webpack5": "6.5.10",
+    "@storybook/react": "6.5.10",
     "@storybook/testing-library": "^ 0.0.13",
     "@tsconfig/strictest": "1.0.1",
     "@types/crypto-js": "^4.1.1",
@@ -54,21 +54,21 @@
     "@types/node": "17.0.36",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.30.7",
-    "@typescript-eslint/parser": "5.30.7",
-    "autoprefixer": "10.4.7",
+    "@typescript-eslint/eslint-plugin": "5.32.0",
+    "@typescript-eslint/parser": "5.32.0",
+    "autoprefixer": "10.4.8",
     "babel-loader": "^8.2.5",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-storybook": "0.6.1",
+    "eslint-plugin-storybook": "0.6.3",
     "eslint-plugin-tailwindcss": "3.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "postcss": "8.4.14",
     "prettier": "2.7.1",
-    "tailwindcss": "3.1.6",
+    "tailwindcss": "3.1.7",
     "typescript": "4.7.4"
   }
 }
