--- a/package.json
+++ b/package.json
@@ -4,18 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:start": "next start",
     "dev:storybook": "start-storybook -p 6006",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "next start",
     "test": "jest",
-    "check:type": "tsc --noEmit",
-    "check:lint": "eslint . --ignore-path .gitignore",
-    "check:format": "prettier . --check --ignore-path .gitignore",
-    "check:all": "yarn check:type && yarn check:lint && yarn check:format",
-    "fix:format": "prettier --write . --ignore-path .gitignore",
-    "fix:lint": "eslint --fix . --ignore-path .gitignore",
-    "fix:all": "yarn fix:format && yarn fix:lint",
+    "code:fix": "eslint . --fix --ignore-path .gitignore && prettier . --write --ignore-path .gitignore",
+    "code:check": "tsc --noEmit && eslint . --ignore-path .gitignore && prettier . --check --ignore-path .gitignore",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
