--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "toys-box",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:storybook": "start-storybook -p 6006",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
     "code:fix": "eslint . --fix --ignore-path .gitignore && prettier . --write --ignore-path .gitignore",
-    "code:check": "tsc --noEmit && eslint . --ignore-path .gitignore && prettier . --check --ignore-path .gitignore",
-    "build-storybook": "build-storybook"
+    "code:check": "tsc --noEmit && eslint . --ignore-path .gitignore && prettier . --check --ignore-path .gitignore"
   },
   "dependencies": {
     "@dnd-kit/core": "6.0.5",
@@ -21,6 +18,7 @@
     "base64-emoji-parser": "0.1.4",
     "crypto-js": "4.1.1",
     "dayjs": "1.11.6",
+    "jotai": "^1.11.0",
     "nanoid": "4.0.0",
     "next": "13.0.5",
     "react": "18.2.0",
@@ -28,38 +26,22 @@
     "react-hook-form": "7.40.0",
     "react-icons": "4.7.1",
     "react-textarea-autosize": "8.4.0",
-    "recoil": "0.7.6",
     "zod": "3.19.1"
   },
   "devDependencies": {
-    "@babel/core": "7.20.5",
-    "@storybook/addon-actions": "6.5.13",
-    "@storybook/addon-essentials": "6.5.13",
-    "@storybook/addon-interactions": "6.5.13",
-    "@storybook/addon-links": "6.5.13",
-    "@storybook/addon-postcss": "2.0.0",
-    "@storybook/builder-webpack5": "6.5.13",
-    "@storybook/manager-webpack5": "6.5.13",
-    "@storybook/react": "6.5.13",
-    "@storybook/testing-library": "0.0.13",
     "@tsconfig/strictest": "1.0.2",
     "@types/crypto-js": "4.1.1",
-    "@types/jest": "29.2.3",
-    "@types/node": "18.11.10",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.0",
     "autoprefixer": "10.4.13",
-    "babel-loader": "9.1.0",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-storybook": "0.6.7",
-    "eslint-plugin-tailwindcss": "3.7.1",
+    "eslint-plugin-tailwindcss": "3.6.2",
     "eslint-plugin-unused-imports": "2.0.0",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
     "postcss": "8.4.19",
     "prettier": "2.8.0",
     "tailwindcss": "3.2.4",
