--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx only-allow npm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -10,41 +11,41 @@
     "code:check": "tsc --noEmit && eslint . --ignore-path .gitignore && prettier . --check --ignore-path .gitignore"
   },
   "dependencies": {
-    "@dnd-kit/core": "6.0.5",
-    "@dnd-kit/sortable": "7.0.1",
-    "@dnd-kit/utilities": "3.2.0",
-    "@headlessui/react": "1.7.4",
-    "@hookform/resolvers": "2.9.10",
-    "base64-emoji-parser": "0.1.4",
+    "@dnd-kit/core": "6.0.8",
+    "@dnd-kit/sortable": "7.0.2",
+    "@dnd-kit/utilities": "3.2.1",
+    "@headlessui/react": "1.7.12",
+    "@hookform/resolvers": "2.9.11",
+    "base64-emoji-parser": "0.1.8",
     "crypto-js": "4.1.1",
-    "dayjs": "1.11.6",
-    "jotai": "^1.11.0",
-    "nanoid": "4.0.0",
-    "next": "13.0.7",
+    "dayjs": "1.11.7",
+    "jotai": "^2.0.2",
+    "nanoid": "4.0.1",
+    "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.40.0",
+    "react-hook-form": "7.43.2",
     "react-icons": "4.7.1",
     "react-textarea-autosize": "8.4.0",
-    "zod": "3.19.1"
+    "zod": "3.20.6"
   },
   "devDependencies": {
     "@tsconfig/strictest": "1.0.2",
     "@types/crypto-js": "4.1.1",
-    "@types/node": "18.11.10",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "@typescript-eslint/parser": "5.45.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
     "autoprefixer": "10.4.13",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.7",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-tailwindcss": "3.7.1",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.1",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-tailwindcss": "3.9.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "postcss": "8.4.19",
-    "prettier": "2.8.0",
-    "tailwindcss": "3.2.4",
-    "typescript": "4.9.3"
+    "postcss": "8.4.21",
+    "prettier": "2.8.4",
+    "tailwindcss": "3.2.7",
+    "typescript": "4.9.5"
   }
 }
