--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "ignoreDeprecations": "5.0"
   },
   "include": ["next-env.d.ts", "src/**/*", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
