--- a/package.json
+++ b/package.json
@@ -14,38 +14,40 @@
     "@dnd-kit/core": "6.0.8",
     "@dnd-kit/sortable": "7.0.2",
     "@dnd-kit/utilities": "3.2.1",
-    "@headlessui/react": "1.7.12",
-    "@hookform/resolvers": "2.9.11",
+    "@headlessui/react": "1.7.13",
+    "@hookform/resolvers": "3.0.0",
+    "@kaze-style/core": "^0.17.1",
     "base64-emoji-parser": "0.1.8",
     "crypto-js": "4.1.1",
     "dayjs": "1.11.7",
-    "jotai": "^2.0.2",
+    "jotai": "^2.0.3",
     "nanoid": "4.0.1",
-    "next": "13.2.1",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.43.2",
-    "react-icons": "4.7.1",
-    "react-textarea-autosize": "8.4.0",
-    "zod": "3.20.6"
+    "react-hook-form": "7.43.8",
+    "react-icons": "4.8.0",
+    "react-textarea-autosize": "8.4.1",
+    "zod": "3.21.4"
   },
   "devDependencies": {
+    "@kaze-style/next-plugin": "^0.17.1",
     "@tsconfig/strictest": "1.0.2",
     "@types/crypto-js": "4.1.1",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
+    "@types/node": "18.15.9",
+    "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.53.0",
-    "@typescript-eslint/parser": "5.53.0",
-    "autoprefixer": "10.4.13",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-tailwindcss": "3.9.0",
+    "@typescript-eslint/eslint-plugin": "5.56.0",
+    "@typescript-eslint/parser": "5.56.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-tailwindcss": "3.10.1",
     "eslint-plugin-unused-imports": "2.0.0",
     "postcss": "8.4.21",
-    "prettier": "2.8.4",
+    "prettier": "2.8.7",
     "tailwindcss": "3.2.7",
-    "typescript": "4.9.5"
+    "typescript": "5.0.2"
   }
 }
